--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "chart.js": "^2.8.0",
     "codelyzer": "~4.5.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
