--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "^7.3.7",
     "@angular/cli": "~7.2.3",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
@@ -25,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@auth0/angular-jwt": "^2.1.0",
+    "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -32,6 +34,7 @@
     "codelyzer": "~4.5.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
