--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
     "ng2-currency-mask": "^5.3.1",
     "ng2-toasty": "^4.0.3",
     "primeicons": "^1.0.0",
-    "primeng": "^7.0.5",
+    "primeng": "^8.0.2",
     "protractor": "~5.4.0",
+    "quill": "^1.3.6",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.2",
     "ts-node": "~7.0.0",
